# rs-claude-bar

./: .gitignore  AGENTS.md  ANALYSIS.md  CLAUDE.md  CODE_CLEANUP_ANALYSIS.md  Cargo.toml  LICENSE  NEW_TODO.md  README.md  SAMPLE.jsonl  SAMPLE_SCHEMA.md  TODO.md  Test.py  claude.sh  input.sh  test.sh
.claude-bar/: config.json
.github/workflows/: ci.yml
rs-claude-bar/: CLAUDE.md  README.md  TODO.md
rs-claude-bar/src/: main.rs
src/: cli.rs  colors.rs  lib.rs  main.rs  parser.rs  status.rs  types.rs  utils.rs
src/analyze/: analyzer.rs  helpers.rs  mod.rs  types.rs  utils.rs
src/analyze/helpers_v2/: extract_limit_info.rs  group_entries_by_hour.rs  mod.rs  parse_line.rs
src/analyzer/: analyzer.rs  helpers.rs  mod.rs
src/analyzer/helpers_v2/: hour_boundary.rs  (+4 more)
src/cache/: cache_manager.rs  error.rs  mod.rs  types.rs  utils.rs
src/claude_sdk/: assistant_message.rs  claude_code_options.rs  content_block.rs  mcp_http_server_config.rs  mcp_server_config.rs  mcp_servers.rs  mcp_sse_server_config.rs  mcp_stdio_server_config.rs  message.rs  message_content.rs  mod.rs  permission_mode.rs  result_message.rs  system_message.rs  text_block.rs  thinking_block.rs  tool_result_block.rs  tool_use_block.rs  user_message.rs
src/claude_types/: content.rs  input.rs  message.rs  mod.rs  tool_use.rs  transcript_entry.rs  types.rs  usage.rs
src/claudebar_types/: blocks.rs  cache.rs  config.rs  file_info.rs  limit_info.rs  mod.rs  per_hour_log.rs  stats.rs  usage_entry.rs
src/commands/: blocks.rs  config.rs  debug.rs  display.rs  display_config.rs  help.rs  history.rs  info.rs  install.rs  mod.rs  prompt.rs  resets.rs  shared_types.rs  stats.rs  status.rs  table.rs  update.rs
src/common/: app_dirs.rs  colors.rs  config.rs  duration.rs  input.rs  mock.rs  mod.rs  utils.rs
src/config/: config_manager.rs  mod.rs  types.rs
src/config_manager/: config_loader.rs  mod.rs
src/display/: formats.rs  items.rs  manager.rs  mod.rs  prompt.rs  status_config.rs  table.rs
src/formatting/: number.rs  text.rs
src/helpers/: cache.rs  file_system.rs  mod.rs
src/table/: mod.rs  table.rs
src/utils/: formatting.rs  mod.rs  time_utils.rs
tests/: data_folder_test.rs  integration_tests.rs  parse_logs.rs  small_folder_test.rs  testing.rs  unit_utils.rs  utils_test.rs
tests/common/: mod.rs
tests/data/: README.md
(+23 files in other folders)
