[package]
name = "rs-claude-bar"
version = "0.1.0"
edition = "2021"
description = "Enhanced Claude Code usage tracker with 5-hour window monitoring"
license = "MIT"
repository = "https://github.com/DevOpsBenjamin/rs-claude-bar"
keywords = ["claude", "ai", "usage", "cli", "monitoring"]
categories = ["command-line-utilities"]

[[bin]]
name = "rs-claude-bar"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
atty = "0.2"
clap = { version = "4", features = ["derive"] }
tabled = "0.14"
serde = { version = "1.0", features = ["derive"] }
dirs = "5"
regex = "1.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
